--- a/wp-content/themes/frautiroler/assets/scss/_footer.scss
+++ b/wp-content/themes/frautiroler/assets/scss/_footer.scss
@@ -4,15 +4,32 @@
 	    padding: 36px 0;
 	    border-top:0;
 	    @media(max-width: 991px){
-	    	padding: 30px 0;
+	    	padding: 40px 0;
 	    }
 	}
 	&-sidebar{
 		width: 100%;
 		text-align: center;
+		&.footer-1{
+			text-align: left;
+			@media(max-width: 991px){
+				text-align: center;
+				order: 1;
+			}
+		}
+		&.footer-2{
+			text-align: right;
+			@media(max-width: 991px){
+				text-align: center;
+				order: 3;
+			}
+		}
+		&.footer-3{
+			order: 2;
+		}
 	}
 	&-wrapper{
-	    padding: 0 30px;
+	    padding: 0 15px;
 	    display: flex;
 	    align-items: center;
 	    justify-content: space-between;
@@ -33,6 +50,9 @@
 			    margin-bottom: 26px;
 				&-item{
 					border-top: 1px solid #E6E6E6;
+					margin-bottom: 0;
+					padding: 17px 0 14px;
+					line-height: 0;
 					a{
 						font-weight: normal;
 						font-size: 14px;
@@ -70,7 +90,7 @@
 		}
 		.menu{
 			display: flex;
-			padding: 28px 30px;
+			padding: 28px 0px;
 			&-item{
 				margin-bottom: 0;
 			    line-height: 0;
