--- a/wp-content/themes/frautiroler/assets/scss/theme-style.scss
+++ b/wp-content/themes/frautiroler/assets/scss/theme-style.scss
@@ -1,4 +1,4 @@
-$ease-in-out: cubic-bezier(0.48, 0.04, 0.25, 1);
+@import "variables";
 
 @import "header";
 @import "animated-strip";
